# civis

./: DESIGN.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
datasets/: __init__.py  dataset.py  encoding.py  masking.py
distances/: VALIDATION.md  __init__.py  cache.py  composite.py  data.py  feature_store.py  metric_plugins.py  participation.py  protocols.py  registry.py  sequence.py  timing.py
evaluation/: __init__.py  attention_analysis.py  base.py  caveat_adapter.py  continuous.py  discrete.py  generative.py  geometry.py
experiments/: __init__.py  ablations.py  configs.py  report.py  run.py
experiments/configs/: ablation_loss_regression.yaml  ablation_loss_softnn.yaml  ablation_masking_high.yaml  ablation_no_masking.yaml  attention_1layer.yaml  attention_2layer.yaml  attention_2layer_lazy.yaml  attention_4layer.yaml  baseline_addition.yaml  film.yaml
models/: __init__.py  addition.py  attention.py  base.py  film.py  registry.py
scripts/: reproduce.sh
tests/: test_ablations.py  test_attention_analysis.py  test_data.py  test_dataset.py  test_distance_registry.py  test_distances.py  test_encoding.py  test_evaluation.py  test_feature_store.py  test_geometry.py  test_losses.py  test_masking.py  test_models.py  test_report.py  test_smoke.py
tests/fixtures/: activities.csv  attributes.csv
training/: __init__.py  losses.py  trainer.py
