[project]
name = "civis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "torch>=2.0",
    "scipy>=1.11",
    "joblib>=1.3",
    "pytest>=8.0",
    "pytorch-lightning>=2.0",
    "tensorboard>=2.14",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "umap-learn>=0.5",
    "tabulate>=0.9",
]
