[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["distances*", "datasets*", "models*", "training*", "evaluation*", "experiments*"]

[project]
name = "civis"
version = "0.1.0"
description = "Attribute embedding learning for human activity schedules using contrastive learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "torch>=2.0",
    "scipy>=1.11",
    "joblib>=1.3",
    "pytorch-lightning>=2.0",
    "tensorboard>=2.14",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "umap-learn>=0.5",
    "tabulate>=0.9",
    "click>=8.1",
]

[project.scripts]
civis = "main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
